[project]
name = "garden-world"
version = "0.1.0"
description = "QClaw skill for My Garden World redeem code automation"
requires-python = ">=3.10"
dependencies = ["playwright>=1.40"]

[project.scripts]
garden-world = "garden_world.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garden_world"]
