[project]
name = "garden-world"
version = "0.3.0"
description = "Auto-fetch daily redeem codes for My Garden World from Xiaohongshu, with WeChat push"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "playwright>=1.40",
    "httpx>=0.27",
    "qrcode>=7.0",
]

[project.optional-dependencies]
image = ["pycryptodome>=3.20"]
test = ["pytest>=7.0", "pytest-mock>=3.0"]

[project.scripts]
garden-world = "garden_world.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garden_world"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live browser + network (deselect with '-m not integration')",
]
